--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "gh-pages": "^5.0.0",
+    "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -48,8 +50,7 @@
   "devDependencies": {
     "eslint": "^8.32.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3"
+    "lint-staged": "^13.1.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
