--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^5.0.0",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
