--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.2.4",
     "gh-pages": "^5.0.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.identity": "^3.0.0",
+    "lodash.pickby": "^4.6.0",
     "prettier": "^2.8.3",
     "qs": "^6.11.0",
     "react": "^18.2.0",
