--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.2.4",
     "gh-pages": "^5.0.0",
     "lodash.debounce": "^4.0.8",
